--- a/app/src/main/res/layout/fragment_take.xml
+++ b/app/src/main/res/layout/fragment_take.xml
@@ -95,11 +95,9 @@
         app:layout_constraintTop_toBottomOf="@id/my_medicine_tv"
 
         android:layout_marginTop="5dp"
-
+        tools:listitem="@layout/my_medicine_item"
+        tools:itemCount="4"
         />
-
-
-
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_add"
