--- a/app/src/main/res/layout/item_results.xml
+++ b/app/src/main/res/layout/item_results.xml
@@ -8,6 +8,7 @@
     android:padding="4dp"
     android:orientation="horizontal">
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/lo_pillinfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="start|center_vertical"
