--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -151,8 +151,10 @@
         android:id="@+id/search_lo_tab"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/back_200"
         android:translationZ="1dp"
+
+        app:tabSelectedTextColor="@color/back_700"
+        app:tabTextColor="@color/any_700"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/search_lo_searchbar" />
 
