--- a/app/src/main/res/layout/item_results.xml
+++ b/app/src/main/res/layout/item_results.xml
@@ -46,27 +46,27 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:orientation="vertical">
-        <ImageButton
+        <ToggleButton
             android:id="@+id/btn_favoritepill"
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:layout_gravity="center_horizontal|top"
             android:translationZ="1dp"
-            android:src="@drawable/ic_baseline_star_24dp"
+            android:textOn=""
+            android:textOff=""
             android:scaleType="fitCenter"
-            android:background="@android:color/transparent"
-            app:tint="@color/any_200"/>
-        <ImageButton
+            android:background="@drawable/selector_favorite"/>
+        <ToggleButton
             android:id="@+id/btn_mypill"
             android:layout_width="32dp"
             android:layout_height="32dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="4dp"
             android:layout_gravity="bottom|center_horizontal"
             android:translationZ="1dp"
-            android:src="@drawable/baseline_add_box_24"
+            android:textOn=""
+            android:textOff=""
             android:scaleType="fitCenter"
-            android:background="@android:color/transparent"
-            app:tint="@color/any_200" />
+            android:background="@drawable/selector_mypill" />
     </LinearLayout>
 
 
