fix : Search - 삭제 작업중...

--- a/app/src/main/res/layout/item_results.xml
+++ b/app/src/main/res/layout/item_results.xml
@@ -52,6 +52,7 @@
             android:layout_height="32dp"
             android:layout_gravity="center_horizontal|top"
             android:translationZ="1dp"
+            android:checked="false"
             android:textOn=""
             android:textOff=""
             android:scaleType="fitCenter"
@@ -63,6 +64,7 @@
             android:layout_marginTop="4dp"
             android:layout_gravity="bottom|center_horizontal"
             android:translationZ="1dp"
+            android:checked="false"
             android:textOn=""
             android:textOff=""
             android:scaleType="fitCenter"
