--- a/app/src/main/res/drawable/bottom_sheet_handle.xml
+++ b/app/src/main/res/drawable/bottom_sheet_handle.xml
@@ -3,5 +3,5 @@
     android:shape="rectangle">
     <corners
         android:radius="100dp" />
-    <solid android:color="@color/dark_gray" />
+    <solid android:color="@color/gray" />
 </shape>
