--- a/app/src/main/res/layout/bottomsheet_map_detail.xml
+++ b/app/src/main/res/layout/bottomsheet_map_detail.xml
@@ -8,17 +8,30 @@
     android:layout_height="wrap_content"
     android:background="@drawable/bottom_sheet_white_20"
     android:paddingHorizontal="16dp"
-    android:paddingVertical="4dp"
+    android:paddingTop="8dp"
+    android:paddingBottom="32dp"
     app:behavior_draggable="true"
     app:behavior_hideable="true"
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
+
+    <ImageView
+        android:id="@+id/bottom_sheet_handle"
+        android:layout_width="120dp"
+        android:layout_height="4dp"
+        android:alpha="0.5"
+
+        android:background="@drawable/bottom_sheet_handle"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/bottomsheet_map_detail"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="16dp"
         android:background="@drawable/bottom_sheet_white_20"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_handle"
         tools:layout_editor_absoluteX="16dp">
 
         <TextView
@@ -149,15 +162,5 @@
             app:layout_constraintTop_toTopOf="@+id/phone_title"
             app:srcCompat="@drawable/icon_call" />
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <Space
-        android:layout_width="80dp"
-        android:layout_height="4dp"
-        android:background="@drawable/bottom_sheet_handle"
-
-        android:translationZ="1dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
