--- a/app/src/main/res/drawable/shape_result.xml
+++ b/app/src/main/res/drawable/shape_result.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <corners android:radius="20dp" />
-    <solid android:color="@color/back_200"/>
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
+    <item android:left="-3dp" android:right="-3dp" android:top="-3dp">
+        <shape android:shape="rectangle">
+            <stroke android:width="2dp" android:color="@color/any_200" />
+        </shape>
+    </item>
+</layer-list>
