--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -39,14 +39,17 @@
 
             <EditText
                 android:id="@+id/search_et_searchtext"
-                android:layout_width="250dp"
+                android:layout_width="wrap_content"
                 android:layout_height="40dp"
-                android:layout_marginStart="10dp"
                 android:layout_marginEnd="1dp"
                 android:background="@null"
+                android:layout_marginStart="4dp"
                 android:hint="검색어를 적어 주세요."
+                android:maxLines="1"
+                android:singleLine="true"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/search_btn_search"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -80,6 +83,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:singleLine="true"
+                    android:visibility="gone"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent">
 
@@ -88,7 +92,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         style="@style/Widget.MaterialComponents.Chip.Filter"
-                        android:background="@drawable/selector_key_button"
+
                         android:text="머리"/>
                     <com.google.android.material.chip.Chip
                         android:id="@+id/searchCategory2"
@@ -162,16 +166,27 @@
         android:id="@+id/search_vp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/sp_space"
+        app:layout_constraintBottom_toTopOf="@+id/search_sp_space"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/search_lo_tab" />
 
     <Space
-        android:id="@+id/sp_space"
+        android:id="@+id/search_sp_space"
         android:layout_width="match_parent"
         android:layout_height="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.core.widget.ContentLoadingProgressBar
+        android:id="@+id/search_lodingProgress"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:translationZ="1dp"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
