fix : Search - 검색 수정 - 검색시 프로그래스바 나오게 - 알약 체크후 리싸이클시 사라지는 버그 처리 남은거 - 검색 완료시 프로그래스바 사라지게 - 검색 클릭시 에니메이션 - 검색 클릭시 키보드 내려가게 - 색전 횡한화면 채우기

--- a/app/src/main/res/layout/item_results.xml
+++ b/app/src/main/res/layout/item_results.xml
@@ -8,14 +8,14 @@
     android:paddingVertical="8dp"
     android:orientation="horizontal">
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/lo_pillinfo"
+        android:id="@+id/lo_medicine_info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="start|center_vertical"
         android:layout_weight="10">
 
         <ImageView
-            android:id="@+id/iv_pill"
+            android:id="@+id/iv_medicine"
             android:layout_width="110dp"
             android:layout_height="76dp"
             android:padding="8dp"
@@ -25,7 +25,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/tv_pillname"
+            android:id="@+id/tv_medicine_name"
             android:layout_width="0dp"
             android:layout_height="36dp"
             android:paddingEnd="24dp"
@@ -36,25 +36,27 @@
             android:maxLines="1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/iv_pill"
-            app:layout_constraintTop_toTopOf="@+id/iv_pill" />
+            app:layout_constraintStart_toEndOf="@+id/iv_medicine"
+            app:layout_constraintTop_toTopOf="@+id/iv_medicine" />
 
         <TextView
-            android:id="@+id/tv_pilltype"
+            android:id="@+id/tv_medicine_type"
+            style="@style/caption"
             android:layout_width="0dp"
             android:layout_height="30dp"
-            android:paddingEnd="32dp"
             android:ellipsize="end"
-            android:singleLine="true"
+            android:layout_marginTop="4dp"
             android:hint="제품타입"
-            style="@style/caption"
-            app:layout_constraintBottom_toBottomOf="@+id/iv_pill"
+            android:paddingEnd="32dp"
+            android:singleLine="true"
+
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/iv_pill" />
+            app:layout_constraintStart_toEndOf="@+id/iv_medicine"
+            app:layout_constraintTop_toBottomOf="@+id/tv_medicine_name" />
 
         <ToggleButton
-            android:id="@+id/btn_mypill"
+            android:id="@+id/btn_my_medicine"
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:layout_marginTop="4dp"
@@ -64,7 +66,7 @@
             android:textOn=""
             android:textOff=""
             android:scaleType="fitCenter"
-            android:background="@drawable/selector_mypill"
+            android:background="@drawable/selector_mymedicine"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>
