--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -19,19 +19,19 @@
 
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/ti_phone_number"
+        android:id="@+id/ti_id"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="18dp"
         android:layout_marginTop="32dp"
-        android:hint="@string/input_phone_number"
+        android:hint="@string/input_id"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iv_profile">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/input_phone_number"
+            android:id="@+id/input_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -46,7 +46,7 @@
         android:hint="@string/input_pw"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ti_phone_number">
+        app:layout_constraintTop_toBottomOf="@+id/ti_id">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/input_pw"
