--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -35,19 +35,19 @@
 
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/ti_phone_number"
+        android:id="@+id/ti_id"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="18dp"
         android:layout_marginTop="24dp"
-        android:hint="@string/input_phone_number"
+        android:hint="@string/input_id"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iv_profile">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/input_phone_number"
+            android:id="@+id/input_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </com.google.android.material.textfield.TextInputLayout>
@@ -63,7 +63,7 @@
         android:hint="@string/input_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ti_phone_number">
+        app:layout_constraintTop_toBottomOf="@+id/ti_id">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/input_name"
@@ -71,24 +71,6 @@
             android:layout_height="wrap_content" />
     </com.google.android.material.textfield.TextInputLayout>
 
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/ti_age"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="18dp"
-        android:layout_marginTop="8dp"
-        android:hint="@string/input_age"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ti_name">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/input_age"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/ti_pw"
@@ -100,7 +82,7 @@
         android:hint="@string/input_pw"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ti_age">
+        app:layout_constraintTop_toBottomOf="@+id/ti_name">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/input_pw"
