--- a/app/src/main/res/layout/fragment_take.xml
+++ b/app/src/main/res/layout/fragment_take.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,97 +7,103 @@
     tools:context=".ui.take.fragment.TakeFragment"
     android:padding="10dp">
 
-    <ImageView
-        android:id="@+id/logo_iv"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-
-        android:src="@drawable/medicine"
-        />
-    
-    <TextView
-        android:id="@+id/today_date_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        app:layout_constraintTop_toTopOf="@id/logo_iv"
-        app:layout_constraintBottom_toBottomOf="@id/logo_iv"
-        app:layout_constraintStart_toEndOf="@id/logo_iv"
-
-        android:layout_marginStart="10dp"
-
-        android:text="9월 3일 월요일"
-        style="@style/subtitle_b"
-        />
-
-    <View
-        android:id="@+id/division"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="2dp"
+        android:layout_height="match_parent"
+        >
+        <ImageView
+            android:id="@+id/logo_iv"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
 
-        app:layout_constraintTop_toBottomOf="@id/logo_iv"
-        app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
 
-        android:layout_marginTop="10dp"
+            android:src="@drawable/logo_final"
+            />
 
-        android:background="@color/back_500"
-        />
+        <TextView
+            android:id="@+id/today_date_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
 
-    <TextView
-        android:id="@+id/today_medicine_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="@id/logo_iv"
+            app:layout_constraintBottom_toBottomOf="@id/logo_iv"
+            app:layout_constraintStart_toEndOf="@id/logo_iv"
 
-        app:layout_constraintTop_toBottomOf="@id/division"
-        app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="10dp"
 
-        android:layout_marginTop="10dp"
+            android:text="2024년 9월 3일"
+            style="@style/subtitle"
+            />
 
-        android:text="@string/today_medicine"
-        style="@style/subtitle"
-        />
+        <View
+            android:id="@+id/division"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/today_medicine_rv"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/logo_iv"
+            app:layout_constraintStart_toStartOf="parent"
 
-        app:layout_constraintTop_toBottomOf="@id/today_medicine_tv"
-        app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="10dp"
 
-        android:layout_marginTop="5dp"
+            android:background="@color/back_500"
+            />
 
-        tools:listitem="@layout/today_medicine_item"
-        tools:itemCount="2"
-       />
+        <TextView
+            android:id="@+id/today_medicine_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
 
-    <TextView
-        android:id="@+id/my_medicine_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/division"
+            app:layout_constraintStart_toStartOf="parent"
 
-        app:layout_constraintTop_toBottomOf="@id/today_medicine_rv"
-        app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="15dp"
 
-        android:layout_marginTop="20dp"
+            android:text="@string/today_medicine"
+            style="@style/subtitle"
+            />
 
-        android:text="@string/my_medicine"
-        style="@style/subtitle"
-        />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/today_medicine_rv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/my_medicine_rv"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            app:layout_constraintStart_toStartOf="parent"
 
-        app:layout_constraintTop_toBottomOf="@id/my_medicine_tv"
+            app:layout_constraintTop_toBottomOf="@id/today_medicine_tv"
 
-        android:layout_marginTop="5dp"
-        tools:listitem="@layout/my_medicine_item"
-        tools:itemCount="4"
-        />
+            tools:itemCount="2"
+            tools:listitem="@layout/today_medicine_item" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/my_medicine_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            app:layout_constraintTop_toBottomOf="@id/today_medicine_rv"
+            app:layout_constraintStart_toStartOf="parent"
+
+            android:layout_marginTop="20dp"
+
+            android:text="@string/my_medicine"
+            style="@style/subtitle"
+            />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/my_medicine_rv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            app:layout_constraintTop_toBottomOf="@id/my_medicine_tv"
+
+            android:layout_marginTop="5dp"
+            tools:listitem="@layout/my_medicine_item"
+            tools:itemCount="4"
+            />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+</ScrollView>
