--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -8,20 +8,21 @@
     tools:context=".ui.SignIn.SignUpActivity">
 
     <!-- 프로필 이미지를 표시할 ImageView -->
+
+
+    <!-- 카메라 아이콘을 표시할 ImageButton -->
     <ImageView
         android:id="@+id/iv_profile"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:layout_marginTop="130dp"
-        android:layout_marginBottom="16dp"
-        android:scaleType="centerCrop"
+        android:layout_marginTop="128dp"
         android:background="@drawable/shape_profile"
+        android:scaleType="centerCrop"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-
-    <!-- 카메라 아이콘을 표시할 ImageButton -->
     <Button
         android:id="@+id/btn_profile"
         android:layout_width="120dp"
