--- a/app/src/main/res/layout/fragment_take.xml
+++ b/app/src/main/res/layout/fragment_take.xml
@@ -91,6 +91,18 @@
             style="@style/subtitle"
             />
 
+        <View
+            android:id="@+id/division2"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+
+            app:layout_constraintTop_toBottomOf="@id/my_medicine_tv"
+
+            android:layout_marginTop="4dp"
+
+            android:background="@color/any_200"
+            />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/my_medicine_rv"
             android:layout_width="match_parent"
