--- a/app/src/main/res/layout/my_medicine_item.xml
+++ b/app/src/main/res/layout/my_medicine_item.xml
@@ -32,7 +32,7 @@
         android:layout_marginEnd="10dp"
 
         android:text="타이레놀"
-        style="@style/body_b"
+        style="@style/body"
         android:maxLines="1"
         android:ellipsize="end"
         />
@@ -49,7 +49,7 @@
         android:layout_marginStart="5dp"
 
         android:text="만성 간염, 독성 간질환 보조 치료"
-        style="@style/caption"
+        style="@style/caption_gray"
         android:maxLines="2"
         android:ellipsize="end"
         android:lineSpacingExtra="6dp"
@@ -57,14 +57,13 @@
 
     <ImageView
         android:id="@+id/tv_medicine_alarm_iv"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
 
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="@id/medicine_name_tv"
         app:layout_constraintEnd_toEndOf="parent"
 
-        android:src="@drawable/bell"
+        android:src="@drawable/bell_2"
         />
 
 
