--- a/app/src/main/res/layout/fragment_take.xml
+++ b/app/src/main/res/layout/fragment_take.xml
@@ -2,80 +2,166 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.take.fragment.TakeFragment"
-    android:padding="10dp">
+    tools:context=".ui.take.fragment.TakeFragment">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+
+        android:orientation="vertical"
         >
-        <ImageView
-            android:id="@+id/logo_iv"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
 
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-
-            android:src="@drawable/logo_final"
-            />
-
-        <TextView
-            android:id="@+id/today_date_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            app:layout_constraintTop_toTopOf="@id/logo_iv"
-            app:layout_constraintBottom_toBottomOf="@id/logo_iv"
-            app:layout_constraintStart_toEndOf="@id/logo_iv"
-
-            android:layout_marginStart="10dp"
-
-            android:text="2024년 9월 3일"
-            style="@style/subtitle"
-            />
-
-        <View
-            android:id="@+id/division"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="2dp"
-
-            app:layout_constraintTop_toBottomOf="@id/logo_iv"
-            app:layout_constraintStart_toStartOf="parent"
-
-            android:layout_marginTop="10dp"
-
-            android:background="@color/back_500"
-            />
-
-        <TextView
-            android:id="@+id/today_medicine_tv"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:orientation="horizontal"
 
-            app:layout_constraintTop_toBottomOf="@id/division"
-            app:layout_constraintStart_toStartOf="parent"
+            android:paddingVertical="10dp"
+            android:paddingStart="22dp"
+            >
+            <ImageView
+                android:id="@+id/logo_iv"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
 
-            android:layout_marginTop="15dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
 
-            android:text="@string/today_medicine"
-            style="@style/subtitle"
-            />
+                android:src="@drawable/logo_final"
+                />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/today_medicine_rv"
+            <TextView
+                android:id="@+id/today_date_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                app:layout_constraintTop_toTopOf="@id/logo_iv"
+                app:layout_constraintBottom_toBottomOf="@id/logo_iv"
+                app:layout_constraintStart_toEndOf="@id/logo_iv"
+
+                android:layout_marginStart="10dp"
+
+                android:text="2024년 9월 3일"
+                style="@style/subtitle"
+                />
+
+        </LinearLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
 
-            android:layout_marginTop="15dp"
-            app:layout_constraintStart_toStartOf="parent"
+            android:paddingTop="16dp"
+            android:paddingBottom="32dp"
 
-            app:layout_constraintTop_toBottomOf="@id/today_medicine_tv"
+            android:background="@color/beige"
+            >
 
-            tools:itemCount="2"
-            tools:listitem="@layout/today_medicine_item" />
+            <TextView
+                android:id="@+id/today_medicine_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+
+                android:layout_marginStart="22dp"
+
+                android:text="@string/today_medicine"
+                style="@style/subtitle"
+                />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/today_medicine_rv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:layout_marginTop="15dp"
+                android:layout_marginHorizontal="22dp"
+                app:layout_constraintStart_toStartOf="parent"
+
+                app:layout_constraintTop_toBottomOf="@id/today_medicine_tv"
+
+                tools:itemCount="2"
+                tools:listitem="@layout/today_medicine_item"
+
+                android:visibility="visible"
+
+                />
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/no_today_view_box"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+
+                android:visibility="gone"
+
+                app:layout_constraintTop_toBottomOf="@id/today_medicine_tv"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="32dp"
+                android:layout_marginHorizontal="16dp"
+
+                android:paddingVertical="16dp"
+                android:paddingHorizontal="16dp"
+
+                android:background="@drawable/round_white_radius8"
+                >
+
+                <TextView
+                    android:id="@+id/no_today_guide_title_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+
+                    android:text="@string/no_today_guide_title"
+                    style="@style/body_b"
+                    />
+                <TextView
+                    android:id="@+id/no_today_guide_body_tv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+
+                    app:layout_constraintTop_toBottomOf="@id/no_today_guide_title_tv"
+                    app:layout_constraintStart_toStartOf="@id/no_today_guide_title_tv"
+
+                    android:layout_marginTop="16dp"
+
+                    android:text="@string/no_today_guide_body"
+                    style="@style/body"
+
+                    android:lineSpacingExtra="5dp"
+                    />
+
+                <TextView
+                    android:id="@+id/no_today_guide_go_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
+                    app:layout_constraintTop_toBottomOf="@id/no_today_guide_body_tv"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+
+                    android:layout_marginTop="16dp"
+
+                    android:text="@string/no_today_guide_btn"
+                    style="@style/body_big"
+
+                    app:drawableStartCompat="@drawable/timer_img"
+                    app:drawableEndCompat="@drawable/plus_img"
+                    android:drawablePadding="5dp"
+                    />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
         <TextView
             android:id="@+id/my_medicine_tv"
@@ -85,7 +171,8 @@
             app:layout_constraintTop_toBottomOf="@id/today_medicine_rv"
             app:layout_constraintStart_toStartOf="parent"
 
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginStart="22dp"
 
             android:text="@string/my_medicine"
             style="@style/subtitle"
@@ -114,7 +201,7 @@
             tools:listitem="@layout/my_medicine_item"
             tools:itemCount="4"
             />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 
 
 
