--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,5 +13,7 @@
     <color name="dark_gray">#5C5C5C</color>
     <color name="gray">#B7B7B7</color>
     <color name="light_gray">#E9E9E9</color>
+    
+    <color name="beige">#FFDBFBE8</color>
 
 </resources>
