--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -36,6 +36,12 @@
         <item name="android:textSize">24sp</item>
     </style>
 
+    <style name="body_big">
+        <item name="fontFamily">@font/pretendard</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">18sp</item>
+    </style>
+
     <style name="body">
         <item name="fontFamily">@font/pretendard</item>
         <item name="android:textColor">@color/black</item>
