fix: 검색결과 없는 경우 가이드 띄우기

--- a/app/src/main/res/layout/fragment_take.xml
+++ b/app/src/main/res/layout/fragment_take.xml
@@ -92,7 +92,7 @@
                 />
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/no_today_view_box"
+                android:id="@+id/no_today_guide_box"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
 
