fix : Detail - 디테일 띄워지는 것 까지 확인 - 닫기!!

--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -23,7 +23,7 @@
             android:layout_height="64dp"
 
             android:scaleType="fitCenter"
-            android:src="@drawable/choco"
+            android:src="@drawable/logo_final"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
