fix : Search - 검색시 키보드 내리기
남은 것
검색전 횡한화면 채우기

--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -47,6 +47,7 @@
                 android:hint="검색어를 적어 주세요."
                 android:maxLines="1"
                 android:singleLine="true"
+                android:inputType="text"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/search_btn_search"
                 app:layout_constraintHorizontal_bias="0.0"
