"chore : 불필요한 코드 제거"

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,11 +33,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?android:attr/windowBackground"
-
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:menu="@menu/bottom_nav_menu"
-        />
+        app:itemIconTint="@color/select_icon"
+        app:itemTextColor="@color/select_icon"
+        app:menu="@menu/bottom_nav_menu" />
 
 
 
