"design : image 수정"

--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -90,7 +90,7 @@
             android:id="@+id/iv_my_profile"
             android:layout_width="80dp"
             android:layout_height="80dp"
-            android:src="@drawable/sparta" />
+            android:src="@drawable/icon_user" />
     </androidx.cardview.widget.CardView>
 
     <TextView
